--- a/index.html
+++ b/index.html
@@ -26,25 +26,28 @@
         </article>
         <div class="image-placeholder">This is a placeholder for an image</div>
     </section>
-    <section>
-        <h1>Some random information</h1>
-        <article>
-            <div></div>
-            <p>This is some subtext under an illustration or image</p>
-        </article>
-        <article>
-            <div></div>
-            <p>This is some subtext under an illustration or image</p>
-        </article>
-        <div></div>
-        <p>This is some subtext under an illustration or image</p>
-        <article>
-            <div></div>
-            <p>This is some subtext under an illustration or image</p> 
-        </article>
-        <article></article>
+    <section class="random-info">
+        <h1>Some random information.</h1>
+        <div class="card-container">
+            <article>
+                <div class="card-placeholder"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </article>
+            <article>
+                <div class="card-placeholder"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </article>
+            <article>
+                <div class="card-placeholder"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </article>
+            <article>
+                <div class="card-placeholder"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </article>
+        </div>
     </section>
-    <section>
+    <section class="quote">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p>-Thor, God of Thunder</p>
     </section>
