modify the footer

--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
         </div>
         <button>Sign up</button>
     </section>
-    <footer>Copyright © The Odin Project 2021</footer>
+    <footer>Copyright © The Odin Project 2021. Made with love by Haveecode.</footer>
 </body>
 </html>
